Fix wrong width

--- a/src/app/components/listing/listing.component.css
+++ b/src/app/components/listing/listing.component.css
@@ -20,7 +20,7 @@
     margin: 0px 0px 20px 0px;
     box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0px;
     background-color: white;
-    width: calc(100% - 12px);
+    width: 100%;
     border-radius: 6px;
     align-items: center;
     padding: 0px;
